[package]
name = "rustracing"
version = "0.6.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "OpenTracing API for Rust"
homepage = "https://github.com/sile/rustracing"
repository = "https://github.com/sile/rustracing"
readme = "README.md"
keywords = ["opentracing", "distributed-tracing"]
categories = ["web-programming"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustracing"}

[features]
stacktrace = [ "backtrace" ]
default = [ "stacktrace" ]

[dependencies]
backtrace = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync"] }
rand = "0.8.1"
trackable = "1.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
